# METRICS

./: .buildinfo  .gitignore  .pylintrc  ABM.py  Makefile  README.md  abm_biopsy.py  abm_collect2.py  abm_parse.py  abm_validation.py  biopsy_stat.py  genindex.html  index.html  location_maps.py  map_locations.py  map_samples.py  metrics.analysis.analysis.html  metrics.analysis.coordinate.html  metrics.analysis.database.html  metrics.analysis.experiment.html  metrics.analysis.html  metrics.analysis.simulation.html  metrics.feature.continuous_feature.html  metrics.feature.discrete_feature.html  metrics.feature.feature.html  metrics.feature.html  metrics.html  metrics.main.html  metrics.sample.html  metrics.sample.sample.html  metrics.sample.sample_needle.html  metrics.sample.sample_punch.html  metrics.script.html  metrics.script.script.html  metrics.workflows.html  modules.html  mypy.ini  objects.inv  plot_tumor.py  py-modindex.html  (+8 more)
.github/workflows/: build.yml  documentation.yml  lint.yml
Andrea/: biopsy.py  biopsy_stat.py
_modules/: index.html
_modules/metrics/: main.html  workflows.html
_sources/: index.rst.txt  metrics.analysis.analysis.rst.txt  metrics.analysis.coordinate.rst.txt  metrics.analysis.database.rst.txt  metrics.analysis.experiment.rst.txt  metrics.analysis.rst.txt  metrics.analysis.simulation.rst.txt  metrics.feature.continuous_feature.rst.txt  metrics.feature.discrete_feature.rst.txt  metrics.feature.feature.rst.txt  metrics.feature.rst.txt  metrics.main.rst.txt  metrics.rst.txt  metrics.sample.rst.txt  metrics.sample.sample.rst.txt  metrics.sample.sample_needle.rst.txt  metrics.sample.sample_punch.rst.txt  metrics.script.rst.txt  metrics.script.script.rst.txt  metrics.workflows.rst.txt
_sources/_summary/: metrics.analysis.analysis.rst.txt  metrics.analysis.coordinate.rst.txt  metrics.analysis.database.rst.txt  metrics.analysis.experiment.rst.txt  metrics.analysis.rst.txt  (+11 more)
_summary/: metrics.analysis.analysis.html  metrics.analysis.coordinate.html  metrics.analysis.database.html  metrics.analysis.experiment.html  metrics.analysis.html  metrics.analysis.simulation.html  metrics.feature.continuous_feature.html  metrics.feature.discrete_feature.html  metrics.feature.feature.html  metrics.feature.html  metrics.sample.html  metrics.sample.sample.html  metrics.sample.sample_needle.html  metrics.sample.sample_punch.html  metrics.script.html  metrics.script.script.html
data_overview/: abm_group.py  abm_validation.py
docs/: abmbiopsy.rst  conf.py  index.rst  modules.rst
figures/: abm_discrete_figs.py
(+75 files in other folders)
