[tool.poetry]
name = "abmbiopsy"
version = "0.1.0"
description = "Description of the abmbiopsy project."
authors = [
	"Isabelle Chen <isabellechen2023@u.northwestern.edu>",
	"Alexis N. Prybutok <aprybutok@u.northwestern.edu",
	"Jessica S. Yu <jesyu@uw.edu>",
]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "1.21.1"
click = "^8.0.1"
pandas = "1.3.0"
matplotlib = "^3.0.3"
statsmodels = "0.11.1"

[tool.poetry.dev-dependencies]
tox = "^3.24.0"
pytest = "^6.2.4"
pylint = "^2.9.5"
pytest-cov = "^2.12.1"
Sphinx = "^4.1.1"
black = "^22.3.0"
mypy = "^0.941"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.scripts]
abmbiopsy = "abmbiopsy.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
