[tool.poetry]
name = "metrics"
version = "0.1.0"
description = ""
authors = [
	"Isabelle Chen <isabellechen2023@u.northwestern.edu>",
	"Jacob Evarts <jevarts@uw.edu>",
	"Alexis N. Prybutok <aprybutok@u.northwestern.edu",
	"Jessica S. Yu <jesyu@uw.edu>",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.7.2"
numpy = "^1.21.1"
click = "^8.1.3"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
statsmodels = "^0.13.2"
black = "^23.0.0"

[tool.poetry.dev-dependencies]
tox = "^3.25.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-subtests = "^0.8.0"
pylint = "^2.14.1"
black = "^23.0.0"
mypy = "^0.961"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
